2006-03-31  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        A bit more code cleanup.

        * bindings/c/c_utility.cpp:
        (KJS::Bindings::convertValueToNPVariant):
        * bindings/objc/objc_runtime.mm:
        (convertValueToObjcObject):
        * bindings/objc/objc_utility.mm:
        (KJS::Bindings::convertValueToObjcValue):
        * kjs/function.cpp:
        (KJS::GlobalFuncImp::callAsFunction):
        * kjs/interpreter.cpp:
        (KJS::ExecState::lexicalInterpreter):
        * kjs/interpreter.h:
        * kjs/operations.cpp:
        (KJS::equal):

2006-03-30  Eric Seidel  <eseidel@apple.com>

        Reviewed by anders.

        Small code-style update.

        * kjs/operations.cpp:
        (KJS::isNaN):
        (KJS::isInf):
        (KJS::isPosInf):
        (KJS::isNegInf):
        (KJS::equal):
        (KJS::strictEqual):
        (KJS::relation):
        (KJS::maxInt):
        (KJS::minInt):
        (KJS::add):
        (KJS::mult):

2006-03-31  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.

        Make sure the GetterSetterImp objects are marked as well.
        
        * kjs/internal.cpp:
        (KJS::GetterSetterImp::mark):
        Call JSCell::mark().

2006-03-30  Eric Seidel  <eseidel@apple.com>

        Reviewed by ggaren.

        * kjs/nodes.h: Some various small style fixes.

2006-03-30  Eric Seidel  <eseidel@apple.com>

        Reviewed by ggaren.

        Clean-up style issues in node.h, remove redundant initializations.

        * kjs/nodes.h:
        (KJS::StatementNode::evaluate):
        (KJS::ArrayNode::ArrayNode):
        (KJS::ObjectLiteralNode::ObjectLiteralNode):
        (KJS::ArgumentsNode::ArgumentsNode):
        (KJS::NewExprNode::NewExprNode):
        (KJS::CaseClauseNode::CaseClauseNode):
        (KJS::FuncDeclNode::FuncDeclNode):

2006-03-30  Tim Omernick  <timo@apple.com>

        Reviewed by Geoff.
